добавлены тесты конуса

--- a/Geometry3D/Geometry3D.csproj
+++ b/Geometry3D/Geometry3D.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bodies\Ball.cs" />
+	<Compile Include="Bodies\Cone.cs" />
     <Compile Include="Bodies\CompundBody.cs" />
     <Compile Include="Bodies\Cylinder.cs" />
     <Compile Include="Bodies\RectangleCuboid.cs" />
